# data-x

./: .gitignore  Cargo.toml  INSTALL-MACOS.md  LICENSE  README.md
.github/workflows/: release.yml
.worktrees/7-1-menubarextra-disk-gauge/: .claude  CONTRIBUTING.md  README.md
.worktrees/7-1-menubarextra-disk-gauge/.github/workflows/: release.yml
.worktrees/7-1-menubarextra-disk-gauge/DataX-Swift/: project.yml
.worktrees/7-1-menubarextra-disk-gauge/DataX-Swift/DataX.xcodeproj/: project.pbxproj
.worktrees/7-1-menubarextra-disk-gauge/DataX-Swift/DataX/App/: AppState.swift
.worktrees/7-1-menubarextra-disk-gauge/DataX-Swift/DataX/Services/SSH/: SSHKeyManager.swift
.worktrees/7-1-menubarextra-disk-gauge/DataX-Swift/DataX/Services/Scanner/: ScannerService.swift
.worktrees/7-1-menubarextra-disk-gauge/DataX-Swift/DataX/Utilities/: ColorPalette.swift  SizeFormatter.swift
.worktrees/7-1-menubarextra-disk-gauge/DataX-Swift/Tests/DataXTests/: WelcomeScreenLogicTests.swift
.worktrees/7-1-menubarextra-disk-gauge/scripts/: sign-macos.sh
.worktrees/7-1-menubarextra-disk-gauge/src/: app.rs  cache.rs  remote.rs
.worktrees/7-1-menubarextra-disk-gauge/src-tauri/: Cargo.toml  entitlements.plist
.worktrees/7-1-menubarextra-disk-gauge/src-tauri/icons/: icon.icns
.worktrees/7-1-menubarextra-disk-gauge/src-tauri/src/: commands.rs  lib.rs  main.rs
.worktrees/7-1-menubarextra-disk-gauge/src-tauri/src/duplicates/: detector.rs  mod.rs
.worktrees/7-1-menubarextra-disk-gauge/src-tauri/src/ssh/: mod.rs
.worktrees/7-1-menubarextra-disk-gauge/src/export/: json.rs
.worktrees/7-1-menubarextra-disk-gauge/src/gui/: mod.rs  treemap_panel.rs
.worktrees/7-1-menubarextra-disk-gauge/src/scanner/: walker.rs
.worktrees/7-1-menubarextra-disk-gauge/src/tree/: mod.rs  node.rs
.worktrees/7-1-menubarextra-disk-gauge/src/ui/: stats.rs  tooltip.rs  treemap.rs
DataX-Swift/: .gitignore  Package.swift  README.md  create-xcode-project.sh  project.yml
DataX-Swift/DataX.xcodeproj/: project.pbxproj
DataX-Swift/DataX/App/: AppDelegate.swift  AppState.swift  DataXApp.swift
DataX-Swift/DataX/Models/: DiskInfo.swift  FileCategory.swift  FileNode.swift  LazyFileNode.swift  SSHConnection.swift  ScanEvent.swift  ScanProgress.swift  ScanRecord.swift
DataX-Swift/DataX/Resources/: Info.plist
DataX-Swift/DataX/Services/Database/: FileTreeDatabase.swift  MemoryBudgetManager.swift  ScanDatabaseWriter.swift  VirtualTreeProvider.swift
DataX-Swift/DataX/Services/Duplicates/: DuplicateDetector.swift
DataX-Swift/DataX/Services/FileOperations/: FileOperationsService.swift
DataX-Swift/DataX/Services/SSH/: SSHConnectionStore.swift  SSHService.swift
DataX-Swift/DataX/Services/Scanner/: ScannerService.swift
DataX-Swift/DataX/Services/System/: FinderServicesProvider.swift
DataX-Swift/DataX/Utilities/: LRUCache.swift  TreemapLayout.swift  TreemapSpatialIndex.swift  VisualizationAccessibility.swift
DataX-Swift/DataX/ViewModels/: FilterViewModel.swift  SSHViewModel.swift  ScannerViewModel.swift
DataX-Swift/DataX/Views/FileTree/: FileTreeView.swift
DataX-Swift/DataX/Views/Main/: ContentView.swift  HeaderView.swift  HistoryPanel.swift  MenuBarView.swift  StatusBarView.swift  TrendSparkline.swift  WelcomeView.swift
DataX-Swift/DataX/Views/SSH/: SSHConnectionModal.swift  SSHSidebarSection.swift
DataX-Swift/DataX/Views/Toolbar/: DuplicateCard.swift  FileTypeLegendOverlay.swift  InsightsPopover.swift  SSHToolbarPopover.swift
DataX-Swift/DataX/Views/Visualizations/: BarChartView.swift  CirclePackingView.swift  IcicleView.swift  SunburstView.swift  TreemapLayerView.swift  TreemapView.swift
DataX-Swift/Tests/DataXTests/: ContentTransitionPolicyTests.swift  DataXTests.swift  DuplicateDetectorTests.swift  FileNodeDeletionPreviewTests.swift  FinderServicesTests.swift  LRUCacheTests.swift  LazyFileNodeTests.swift  MemoryBudgetManagerTests.swift  MenuBarDiskGaugeTests.swift  ScanDatabaseWriterTests.swift  ScanHistoryFeatureTests.swift  ScanHistoryPersistenceTests.swift  ScanProgressMotionPolicyTests.swift  ScanRecordTests.swift  ScanTrendSummaryTests.swift  ScannerServiceDatabaseTests.swift  ScannerServiceTests.swift  ScannerViewModelDeletionTests.swift  ScannerViewModelDuplicateTests.swift  ScannerViewModelIncrementalTests.swift  SunburstArcCacheTests.swift  SunburstPolishTests.swift  ToolbarMigrationLogicTests.swift  TreemapColorCacheTests.swift  TreemapLabelCacheTests.swift  TreemapLayerRendererTests.swift  TreemapPolishPolicyTests.swift  TreemapPulsePolicyTests.swift  TreemapSpatialIndexTests.swift  VirtualTreeProviderTests.swift  VisualizationAccessibilityTests.swift  VisualizationZoomStateTests.swift
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_scripts/: run-epic.sh
scripts/: build-all.sh
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  scanner.rs  types.rs
src-tauri/src/duplicates/: hasher.rs
src-tauri/src/ssh/: connection_manager.rs  credentials.rs  remote_scan.rs
src/export/: mod.rs
src/gui/: app.rs  tree_panel.rs
src/scanner/: disk_space.rs  mod.rs  progress.rs
src/ui/: colors.rs  details.rs  input.rs  layout.rs  mod.rs  tree_view.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  types.ts
ui/src/components/: BarChart.tsx  BarChartCanvas.tsx  CirclePacking.tsx  DuplicateResults.tsx  DuplicateScanModal.tsx  FileList.tsx  FileTree.tsx  FilterBar.tsx  FilterDropdown.tsx  Header.tsx  Icicle.tsx  IcicleCanvas.tsx  Modal.tsx  SSHConnectionList.tsx  SSHConnectionModal.tsx  SearchInput.tsx  StatusBar.tsx  Sunburst.tsx  Treemap.tsx  TreemapCanvas.tsx
ui/src/hooks/: useFilters.ts  useSSHConnections.ts  useSearch.ts
ui/src/styles/: global.css
ui/src/utils/: filters.ts  search.ts
(+3 files in other folders)
