[package]
name = "data-x"
version = "0.3.0"
edition = "2021"
description = "Fast, visual disk space analyzer with GUI and TUI"
authors = ["Cassel <c@cassel.us>"]
license = "MIT"
repository = "https://github.com/cassel/data-x"
homepage = "https://github.com/cassel/data-x"
keywords = ["disk", "analyzer", "storage", "tui", "gui"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "data-x"
path = "src/main.rs"

[features]
default = ["gui"]
gui = ["eframe", "egui", "egui_extras", "image", "rfd"]
tui = []

[dependencies]
# GUI (egui)
eframe = { version = "0.29", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = { version = "0.29", optional = true }
egui_extras = { version = "0.29", optional = true, features = ["image"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
rfd = { version = "0.14", optional = true }  # Native file dialog

# TUI (ratatui)
ratatui = "0.28"
crossterm = "0.28"

# Parallelism
rayon = "1.10"

# CLI
clap = { version = "4", features = ["derive"] }

# File system
walkdir = "2"

# Data structures
indextree = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
thiserror = "1"
anyhow = "1"
unicode-width = "0.2"
chrono = "0.4"

# Actions
arboard = "3"
open = "5"

# Disk space
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.bundle]
name = "Data-X"
identifier = "us.cassel.data-x"
icon = ["assets/icon.icns"]
version = "0.2.0"
copyright = "Copyright (c) 2026 Cassel. All rights reserved."
category = "public.app-category.utilities"
short_description = "Disk analyzer with visual treemap"
long_description = """
Data-X is a fast, visual disk space analyzer.
Features colorful treemap visualization, file type statistics,
and intuitive navigation to help you find what's taking up space.
"""
osx_minimum_system_version = "10.14"
