[package]
name = "data-x"
version = "0.3.0"
description = "Fast, visual disk space analyzer"
authors = ["Cassel <c@cassel.us>"]
license = "MIT"
repository = "https://github.com/cassel/data-x"
edition = "2021"

[lib]
name = "data_x_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

# File system
walkdir = "2"
rayon = "1.10"

# Data structures
indextree = "4"

# Disk space
fs2 = "0.4"

# Trash
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
